# project-03_HaDucHuyK24

./: pyproject.toml
project_04_sql/: Create_table.md  Dynamic_reports.md  Insert_random_data.md  Optimization_techniques.md
src/project_03/: create_tables.py  generate_data.py  main.py  utils.py
